@@ -1,3 +1,10 @@
+2010-04-24  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclBasic.test: modify api of TclSpliceTailcall() 
+	* generic/tclExecute.c:  to fix yieldTo, which had not survived 
+	* generic/tclInt.h:      the latest mods to tailcall. Thanks kbk
+	for detecting the problem.
+
 2010-04-23  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* unix/tclUnixPort.h Fix [Bug #2991415] tclport.h #included before limits.h
